# basic-rag

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: Welcome.py
src/basic_rag/: doc_stores.py  extractors.py  models.py  rag.py  tools.py
src/pages/: 1_🤖_Chatbot.py  2_📄_Documents.py
